# HaffmanCode

./: CMakeLists.txt  Huffman.h  README.md  main.cpp
headers/: BitReaderWriter.h  HaffmanCode.h
src/: HaffmanCode.cpp
test/: CMakeLists.txt  test.cpp  test.txt
